# MotornyIOFlow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.ps1
.github/workflows/: cmake.yml
src/: Configuration.schema.json  Plugin.cpp
